View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023257 | Community | OCCT:Shape Healing | public | 2012-07-11 14:02 | 2012-11-16 13:17 |
Reporter | Pawel | Assigned To | Pawel | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2008 | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.4 | Fixed in Version | 6.5.4 | ||
Summary | 0023257: Missing return statement | ||||
Description | Missing return statement in IsPeriodicConicalLoop in ShapeFix_Face.cxx line 2289. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Corresponding git branch pushed. Please review. |
|
Reviewed with no remarks, please test |
|
Dear BugMaster, The workbenches KAS:dev:mkv-23257-occt (GIT branch CR23257) KAS:dev:mkv-23257-products (GIT master) were compiled on Linux platform and tested. Regression: Not detected Improvements: Not detected Testing case: Not needed See results in /QADisk/occttests/results/KAS/dev/mkv-23257-products_11072012/lin See reference results in /QADisk/occttests/results/KAS/dev/products-20120622-opt_22062012/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-07-11 14:02 | Pawel | New Issue | |
2012-07-11 14:02 | Pawel | Assigned To | => Pawel |
2012-07-11 14:19 | Pawel | Note Added: 0020903 | |
2012-07-11 14:19 | Pawel | Assigned To | Pawel => bugmaster |
2012-07-11 14:19 | Pawel | Status | new => resolved |
2012-07-11 14:19 | Pawel | Note Edited: 0020903 | |
2012-07-11 14:30 | abv | Note Added: 0020905 | |
2012-07-11 14:30 | abv | Status | resolved => reviewed |
2012-07-11 15:42 |
|
Assigned To | bugmaster => mkv |
2012-07-12 12:02 |
|
Note Added: 0020923 | |
2012-07-12 12:02 |
|
Test case number | => Not needed |
2012-07-12 12:02 |
|
Assigned To | mkv => bugmaster |
2012-07-12 12:02 |
|
Status | reviewed => tested |
2012-07-17 17:50 | Pawel | Changeset attached | => occt master fdbc4fe7 |
2012-07-17 17:51 | Pawel | Assigned To | bugmaster => Pawel |
2012-07-17 17:51 | Pawel | Status | tested => verified |
2012-07-17 17:51 | Pawel | Resolution | open => fixed |
2012-11-16 13:15 | bugmaster | Fixed in Version | => 6.5.4 |
2012-11-16 13:17 | bugmaster | Status | verified => closed |