0023257: Missing return statement

Added missing return statement